docs: account management

--- a/docs/src/content/docs/components/account-management/accounts.mdx
+++ b/docs/src/content/docs/components/account-management/accounts.mdx
@@ -137,3 +137,6 @@ app.synth()
   </Fragment>
 </DualCode>
 
+## API References
+- [DataLandingZoneProps](/reference/api#datalandingzoneprops)
+- [DLzOrganization](/reference/api#aws-data-landing-zone.DLzOrganization)
